--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ env:
 jobs:
   pre_commit:
     runs-on: ubuntu-latest
+    outputs:
+      java_version: ${{ env.JAVA_VERSION }}
+      java_version_supported: ${{ env.JAVA_VERSION_SUPPORTED }}
     steps:
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.33.0
       - uses: actions/checkout@v4
@@ -206,11 +209,12 @@ jobs:
         run: mvn ${{ env.MAVEN_CLI_OPTS }} verify -pl 'hxinsight-extension,e2e-test' -am -DskipUnitTests -DskipIntegrationTests -Dalfresco-platform.version=${{ matrix.repoVersion }}
 
   run_e2e_test_other_supported_java:
-    name: "Run e2e tests using ACS ${{ matrix.repoVersion }} on Java 11"
+    name: "Run e2e tests using ACS ${{ matrix.repoVersion }} on Java ${{ needs.pre_commit.outputs.java_version_supported }}"
     runs-on: ubuntu-latest
     needs:
       - pre_commit
     if: >
+      needs.pre_commit.outputs.java_version_supported != needs.pre_commit.outputs.java_version &&
       github.event_name != 'pull_request' &&
       (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
       !contains(github.event.head_commit.message, '[skip build]') &&
@@ -231,15 +235,12 @@ jobs:
           password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.33.0
       - name: "Build application"
-        if: env.JAVA_VERSION_SUPPORTED != env.JAVA_VERSION
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.version=${{ matrix.repoVersion }} -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED }}
       - name: "Build docker images"
-        if: env.JAVA_VERSION_SUPPORTED != env.JAVA_VERSION
         run: |
           JAVA_VERSION=${{ env.JAVA_VERSION_SUPPORTED }}
           bash ./scripts/ci/buildDockerImages.sh
       - name: "Start docker-compose and run e2e docker-compose tests"
-        if: env.JAVA_VERSION_SUPPORTED != env.JAVA_VERSION
         env:
           GHA_RUN_DC: true
         run: |
@@ -249,7 +250,6 @@ jobs:
         if: always()
         run: ./scripts/ci/stop-compose.sh distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
       - name: "Run e2e tests"
-        if: env.JAVA_VERSION_SUPPORTED != env.JAVA_VERSION
         env:
           GHA_RUN_DC: false
         run: mvn ${{ env.MAVEN_CLI_OPTS }} verify -pl 'hxinsight-extension,e2e-test' -am -DskipUnitTests -DskipIntegrationTests -Dalfresco-platform.version=${{ matrix.repoVersion }} -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED }}
