--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -351,6 +351,8 @@ services:
       AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
       HYLAND-EXPERIENCE_INSIGHT_PREDICTIONS_SOURCE-BASE-URL: http://hxinsight-mock:8080
       ALFRESCO_REPOSITORY_BASE-URL: http://alfresco:8080
+      ALFRESCO_REPOSITORY_DISCOVERY-ENDPOINT: http://alfresco:8080/alfresco/api/discovery
+      APPLICATION_SOURCE-ID: alfresco-dummy-source-id-0a63de491876
     ports:
       - "5009:5009"
 
