--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,3 +19,10 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+  - package-ecosystem: docker
+    directory: "/distribution/src/main/resources"
+    schedule:
+      interval: daily
+      time: "22:00"
+      timezone: Europe/London
+    open-pull-requests-limit: 99
