--- a/distribution/src/main/resources/Dockerfile
+++ b/distribution/src/main/resources/Dockerfile
@@ -1,4 +1,7 @@
-FROM alfresco/alfresco-base-java:jre17-rockylinux8-202302221525
+# ACTUAL IMAGE
+# More infos about this image: https://github.com/Alfresco/alfresco-docker-base-java
+# jre17-rockylinux9 (29/07/2024)
+FROM alfresco/alfresco-base-java@sha256:8dca9445141dd07b9a6b7a9962f0505546b2ed041b4d5cc785cc9c2d39eeda19
 ENV PORT=8080
 EXPOSE 8080
 ARG JAR_FILE=*-app.jar
