--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,7 +138,7 @@ jobs:
           password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.33.0
       - name: "Build app"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -am
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Test application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} test -pl '${{ matrix.subproject }}'
 
