ACS-8464: Better names for HxI connector related beans and properties

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -20,4 +20,4 @@ hxi.client.base-url=http://localhost:8001
 
 hxi.question.max-context-size-for-question=100
 
-hxi.application.version="@project.version@"
+hxi.connector.version="@project.version@"
