ACS-8370 Set temporary outdated image

--- a/distribution/src/main/resources/Dockerfile
+++ b/distribution/src/main/resources/Dockerfile
@@ -1,7 +1,7 @@
 # ACTUAL IMAGE
 # More infos about this image: https://github.com/Alfresco/alfresco-docker-base-java
-# jre17-rockylinux9 (19/12/2023)
-FROM alfresco/alfresco-base-java:jre17-rockylinux9-202312191347@sha256:45801565eb6fc065870d4deb33fadf8845f18878c3196032c753883ccca64f09
+# jre17-rockylinux9 (29/07/2023)
+FROM quay.io/alfresco/alfresco-base-java:jre17-rockylinux9@sha256:8dca9445141dd07b9a6b7a9962f0505546b2ed041b4d5cc785cc9c2d39eeda19
 ENV PORT=8080
 EXPOSE 8080
 ARG JAR_FILE=*-app.jar
