NO_JIRA: fix d-c setup

--- a/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
@@ -29,6 +29,8 @@ services:
         -Dhxi.client.base-url=http://hxinsight-mock:8080
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
         "
+    ports:
+      - "8080:8080"
 
   postgres:
     extends:
