ACS-8464 user agent header in hxinsight JAMP (#547)
* ACS-8464: Abstraction on getting ACS version, adding user-agent header to JAMP.

* ACS-8464: Adding user-agent header to get avatar request.

* ACS-8464: Fixing PMD issues.

* ACS-8464: Better names for HxI connector related beans and properties

* ACS-8464: Small refactoring after code review.

* ACS-8464: Small refactoring after code review.

--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>wiremock</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
