--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -19,3 +19,5 @@ hxi.auth.retry.delay-multiplier=2
 hxi.client.base-url=http://localhost:8001
 
 hxi.question.max-context-size-for-question=100
+
+hxi.connector.version="@project.version@"
