--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
     needs:
       - pre_commit
     if: >
-      github.event_name == 'push' &&
+      (github.event_name == 'push' || github.actor == 'dependabot[bot]') &&
       !contains(github.event.head_commit.message, '[skip tests]') &&
       !contains(github.event.head_commit.message, '[skip build]')
     strategy:
@@ -146,7 +146,7 @@ jobs:
     needs:
       - pre_commit
     if: >
-      github.event_name == 'push' &&
+      (github.event_name == 'push' || github.actor == 'dependabot[bot]') &&
       !contains(github.event.head_commit.message, '[skip tests]') &&
       !contains(github.event.head_commit.message, '[skip build]')
     strategy:
@@ -172,7 +172,7 @@ jobs:
     needs:
       - pre_commit
     if: >
-      github.event_name == 'push' &&
+      (github.event_name == 'push' || github.actor == 'dependabot[bot]') &&
       !contains(github.event.head_commit.message, '[skip build]') &&
       !contains(github.event.head_commit.message, '[skip tests]') &&
       !contains(github.event.head_commit.message, '[skip e2es]')
