[ACS-8351] implementing cache for agentsAvatar - need to fix bean configuration

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -19,3 +19,6 @@ hxi.auth.retry.delay-multiplier=2
 hxi.client.base-url=http://localhost:8001
 
 hxi.question.max-context-size-for-question=100
+
+## Agents avatar cache
+cache.agentsAvatarCache.cluster.type=fully-distributed
