--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -21,3 +21,4 @@ hxi.client.base-url=http://localhost:8001
 hxi.question.max-context-size-for-question=100
 
 hxi.connector.version="@project.version@"
+hxi.connector.source-id=alfresco-dummy-source-id-0a63de491876
