ACS-8558 Add /integrations to baseUrl

--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -70,7 +70,7 @@ services:
         -Didentity-service.auth-server-url=http://${HOST_IP}:8999/auth
         -Didentity-service.realm=alfresco
         -Didentity-service.resource=alfresco
-        -Dhxi.client.base-url=http://hxinsight-mock:8080
+        -Dhxi.client.base-url=http://hxinsight-mock:8080/integrations
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
         -Xms1500m -Xmx1500m
         "
