NO_JIRA: add manual release option

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -15,10 +15,16 @@ on:
 jobs:
   trigger_release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/configure-git-author@v6.0.1
+        with:
+          username: ${{ secrets.BOT_GITHUB_USERNAME }}
+          email: ${{ secrets.BOT_GITHUB_EMAIL }}
       - name: test
         run: |
           echo "development_version: ${{ github.event.inputs.development_version }}"
@@ -26,5 +32,7 @@ jobs:
           git checkout -b test-ci
           sed -i '' 's/RELEASE_VERSION:\ \"[^\"]*\"/RELEASE_VERSION: \"${{ github.event.inputs.release_version }}\"/g' ./github/workflows/ci.yml
           git add .
-          git commit -m "Update release version to ${{ github.event.inputs.release_version }}"
+          git commit -m "${{ github.event.inputs.release_version }} [release]"
           git push origin test-ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
