--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -1,4 +1,5 @@
 name: Alfresco Connector for Hyland Experience Insight CI
+run-name: Release ${{ github.event.inputs.release_version }}
 
 on:
   workflow_dispatch:
@@ -25,7 +26,7 @@ jobs:
         with:
           username: ${{ secrets.BOT_GITHUB_USERNAME }}
           email: ${{ secrets.BOT_GITHUB_EMAIL }}
-      - name: test
+      - name: Release
         run: |
           echo "development_version: ${{ github.event.inputs.development_version }}"
           echo "release_version: ${{ github.event.inputs.release_version }}"
