--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -1,4 +1,4 @@
-name: Alfresco Connector for Hyland Experience Insight CI
+name: Release
 run-name: Release ${{ github.event.inputs.release_version }}
 
 on:
