--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -9,7 +9,7 @@ on:
         required: true
         type: choice
         options:
-          - '1.0.0-SNAPSHOT'
+          - '1.0.0-SNAPSHOT' # Hard coded for now - change when needed
       release_version:
         description: 'The version of the release (tag).'
         type: string
