NO_JIRA: add manual release option

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -2,9 +2,18 @@ name: Release
 run-name: Release ${{ github.event.inputs.release_version }}
 
 on:
-  push:
-    branches:
-      - add-manual-release-2
+  workflow_dispatch:
+    inputs:
+      development_version:
+        description: 'The version that will be set in pom files after the release (next dev version)'
+        required: true
+        type: choice
+        options:
+          - '1.0.0-SNAPSHOT' # Hard coded for now - change type to "string" when needed
+      release_version:
+        description: 'The version of the release (tag).'
+        type: string
+        required: true
 
 jobs:
   trigger_release:
@@ -26,8 +35,8 @@ jobs:
 
           git checkout -b test-ci
 
-          sed -i '' 's/DEVELOPMENT_VERSION:\ \"[^\"]*\"/DEVELOPMENT_VERSION: \"${{ github.event.inputs.development_version }}\"/g' ./github/workflows/ci.yml
-          sed -i '' 's/RELEASE_VERSION:\ \"[^\"]*\"/RELEASE_VERSION: \"${{ github.event.inputs.release_version }}\"/g' ./github/workflows/ci.yml
+          sed -i '' 's/DEVELOPMENT_VERSION:\ \"[^\"]*\"/DEVELOPMENT_VERSION: \"${{ github.event.inputs.development_version }}\"/g' ./.github/workflows/ci.yml
+          sed -i '' 's/RELEASE_VERSION:\ \"[^\"]*\"/RELEASE_VERSION: \"${{ github.event.inputs.release_version }}\"/g' ./.github/workflows/ci.yml
 
           git add .
 
