NO_JIRA: add manual release option (#587)

--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -35,8 +35,8 @@ jobs:
 
           git checkout -b test-ci
 
-          sed -i '' 's/DEVELOPMENT_VERSION:\ \"[^\"]*\"/DEVELOPMENT_VERSION: \"${{ github.event.inputs.development_version }}\"/g' ./.github/workflows/ci.yml
-          sed -i '' 's/RELEASE_VERSION:\ \"[^\"]*\"/RELEASE_VERSION: \"${{ github.event.inputs.release_version }}\"/g' ./.github/workflows/ci.yml
+          sed -i 's/DEVELOPMENT_VERSION:\ \"[^\"]*\"/DEVELOPMENT_VERSION: \"${{ github.event.inputs.development_version }}\"/g' ./.github/workflows/ci.yml
+          sed -i 's/RELEASE_VERSION:\ \"[^\"]*\"/RELEASE_VERSION: \"${{ github.event.inputs.release_version }}\"/g' ./.github/workflows/ci.yml
 
           git add .
 
