--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -22,3 +22,5 @@ hxi.question.max-context-size-for-question=100
 
 hxi.connector.version="@project.version@"
 hxi.connector.source-id=alfresco-dummy-source-id-0a63de491876
+
+hxi.knowledge-retrieval.url=https://hxai-7dff8da1-6375-4581-95bb-36e5317d4b9d.insight.dev.ncp.hyland.com/knowledge-retrieval/bots
