ACS-8570: Adjust auth grant-type

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -5,7 +5,7 @@
 ##
 
 hxi.auth.providers.hyland-experience.type=oauth2
-hxi.auth.providers.hyland-experience.grant-type=urn:hyland:params:oauth:grant-type:api-credentials
+hxi.auth.providers.hyland-experience.grant-type=client_credentials
 hxi.auth.providers.hyland-experience.client-name=acs-insight-connector
 hxi.auth.providers.hyland-experience.client-id=
 hxi.auth.providers.hyland-experience.client-secret=
