--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -2,17 +2,9 @@ server:
   port: 8080
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: health
-  endpoint:
-    health:
-      probes:
-        enabled: true
-  health:
-    liveness-state:
-      enabled: true
+  endpoints.web.exposure.include: health
+  endpoint.health.probes.enabled: true
+  health.liveness-state.enabled: true
 
 camel:
   springboot.main-run-controller: true
