ACS-8631: Adjust configuration to different endpoints for agents and questions APIs

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -16,7 +16,9 @@ hxi.auth.retry.attempts=3
 hxi.auth.retry.initial-delay=500
 hxi.auth.retry.delay-multiplier=2
 
-hxi.client.base-url=http://localhost:8001
+hxi.discovery.base-url=http://localhost:8001
+hxi.discovery.agents-endpoint=${hxi.discovery.base-url}/agent/integrations
+hxi.discovery.questions-endpoint=${hxi.discovery.base-url}/qna/integrations
 
 hxi.question.max-context-size-for-question=100
 
