--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -48,7 +48,7 @@ services:
         -Dtransform.misc.url=http://transform-core-aio:8090/
         -Dcsrf.filter.enabled=false
         -Dalfresco.restApi.basicAuthScheme=true
-        -Dhxi.client.base-url=http://hxinsight-mock:8080
+        -Dhxi.discovery.base-url=http://hxinsight-mock:8080
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
         -Xms1500m -Xmx1500m
         "
