--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -297,8 +297,7 @@ services:
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
       HYLAND-EXPERIENCE_INSIGHT_BASE-URL: http://hxinsight-mock:8080
       ALFRESCO_REPOSITORY_DISCOVERY-ENDPOINT: http://alfresco:8080/alfresco/api/discovery
-      ALFRESCO_TRANSFORM_SHARED-FILE-STORE_HOST: http://shared-file-store
-      ALFRESCO_TRANSFORM_SHARED-FILE-STORE_PORT: 8099
+      ALFRESCO_TRANSFORM_SHARED-FILE-STORE_BASE-URL: http://shared-file-store:8099
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-ID: dummy-client-id
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_CLIENT-SECRET: dummy-client-secret
       AUTH_PROVIDERS_HYLAND-EXPERIENCE_ENVIRONMENT-KEY: hxai-env-key
