--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -24,3 +24,5 @@ hxi.question.max-context-size-for-question=100
 
 hxi.connector.version="@project.version@"
 hxi.connector.source-id=alfresco-dummy-source-id-0a63de491876
+
+hxi.knowledge-retrieval.url=http://dummy-host.xyz/knowledge-retrieval/bots
