--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -1,14 +1,19 @@
-application:
-  source-id: alfresco-dummy-source-id-0a63de491876
-  version: "@project.version@"
+server:
+  port: 8080
 
-spring:
-  main:
-    web-application-type: none
+management:
+  endpoints.web.exposure.include: health
+  endpoint.health.probes.enabled: true
+  health.liveness-state.enabled: true
+  health.readiness-state.enabled: true
 
 camel:
   springboot:
     main-run-controller: true
+
+application:
+  source-id: alfresco-dummy-source-id-0a63de491876
+  version: "@project.version@"
 
 hyland-experience:
   insight:
