--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -18,7 +18,7 @@ application:
 hyland-experience:
   insight:
     predictions:
-      source-base-url: http://localhost:8001
+      base-url: http://localhost:8001
       poll-period-millis: 300_000 # 5 minutes
 
 alfresco:
