ACS-8609: Add prediction-applier component to alfresco-connector-hxi Helm chart - adjusting to K8s deployment

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -349,7 +349,7 @@ services:
       AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
       AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
       HYLAND-EXPERIENCE_INSIGHT_PREDICTIONS_BASE-URL: http://hxinsight-mock:8080
-      ALFRESCO_REPOSITORY_BASE-URL: http://alfresco:8080
+      ALFRESCO_REPOSITORY_BASE-URL: http://alfresco:8080/alfresco
       ALFRESCO_REPOSITORY_DISCOVERY-ENDPOINT: http://alfresco:8080/alfresco/api/discovery
       APPLICATION_SOURCE-ID: alfresco-dummy-source-id-0a63de491876
     ports:
