--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,6 @@ jobs:
         with:
           write-list-to-env: true
       - uses: Alfresco/alfresco-build-tools/.github/actions/pre-commit@v6.0.1
-      - run: |
-          uname -m
-          echo $(uname -m)
 
   veracode_sca:
     name: "Veracode - Source Clear Scan (SCA)"
@@ -238,14 +235,8 @@ jobs:
   push_docker_images:
     name: "Push docker images"
     runs-on: ubuntu-latest
-    needs:
-      - test_application
-      - test_distribution
-      - run_e2e_test
     if: >
-      github.event_name == 'push' &&
-      (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
-      !(failure() || cancelled()) &&
+      github.event_name == 'pull_request' &&
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
@@ -262,7 +253,7 @@ jobs:
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
       - name: "Push docker images"
-        run: bash ./scripts/ci/buildDockerImages.sh -p
+        run: bash ./scripts/ci/buildDockerImages.sh
         env:
           COMMIT_MESSAGE: ${{ github.sha }}
       - name: "Clean Maven cache"
