--- a/distribution/src/main/resources/docker/hxinsight-extension/Dockerfile
+++ b/distribution/src/main/resources/docker/hxinsight-extension/Dockerfile
@@ -14,8 +14,8 @@ COPY Dockerfile licenses/*.* $TOMCAT_DIR/webapps/alfresco/WEB-INF/classes/alfres
 RUN chown -R -h $USERNAME $TOMCAT_DIR
 
 # Switch between currently installed JRE version and 11
-ARG JAVA_VERSION
-RUN if [[ -n "$JAVA_VERSION" && "$JAVA_VERSION" == "11" ]]; then \
+ARG JAVA_VERSION=""
+RUN if [[ "$JAVA_VERSION" == "11" ]]; then \
       ARCH=$(uname -m | sed s/86_//); \
       JAVA_RELEASE=11.0.24_8; \
       curl -fsLo java.tar.gz https://github.com/adoptium/temurin${JAVA_VERSION}-binaries/releases/download/jdk-${JAVA_RELEASE/_/+}/OpenJDK${JAVA_VERSION}U-jre_${ARCH}_linux_hotspot_${JAVA_RELEASE}.tar.gz && \
