--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -235,8 +235,14 @@ jobs:
   push_docker_images:
     name: "Push docker images"
     runs-on: ubuntu-latest
+    needs:
+      - test_application
+      - test_distribution
+      - run_e2e_test
     if: >
-      github.event_name == 'pull_request' &&
+      github.event_name == 'push' &&
+      (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
+      !(failure() || cancelled()) &&
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
@@ -253,7 +259,7 @@ jobs:
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
       - name: "Push docker images"
-        run: bash ./scripts/ci/buildDockerImages.sh
+        run: bash ./scripts/ci/buildDockerImages.sh -p
         env:
           COMMIT_MESSAGE: ${{ github.sha }}
       - name: "Clean Maven cache"
