ACS-8732: Adjust docker-compose setup to align with convention

--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -12,5 +12,5 @@ ELASTICSEARCH_TAG=@dist.elasticsearch.version@
 SEARCH_ENTERPRISE_TAG=@dist.search.enterprise.version@
 LOCALSTACK_TAG=@dist.localstack.version@
 WIREMOCK_TAG=@dist.wiremock.version@
+KEYCLOAK_TAG=@dist.keycloak.version@
 HXINSIGHT_CONNECTOR_TAG=@project.version@
-HOST_IP=
